--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,20 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Kraft Dev Shop Components</title>
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
-
 <body>
-    <div>Hello, world!</div>
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-</body>
 
+  <div class="container">
+    <div class="demo" data-name="Button">
+      <a href="#" class="button">Button Text</a>
+    </div>
+  </div>
+
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+</body>
 </html>
